toggle button z-index issue

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -267,6 +267,7 @@ body {
       position: absolute;
       top: 0;
       left: 0;
+      z-index: 10;
       i {
         &.fa-angle-left {
           display: none
